--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "Vite"
   ],
   "license": "MIT",
+  "type": "module",
   "files": [
     "generators"
   ],
@@ -20,7 +21,13 @@
     "yeoman-generator": "^7.1.1",
     "yosay": "^3.0.0"
   },
-  "devDependencies": {
+  "engines": {
+    "node": ">=16"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependecies": {
     "@prettier/plugin-xml": "^3.4.1",
     "@types/yeoman-generator": "^5.2.14",
     "@types/yosay": "^2.0.3",
@@ -34,11 +41,5 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=12"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
