--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
     "module": "ESNext",
     "target": "ES2020",
     "lib": ["ES2020"],
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "noImplicitAny": true,
     "strictNullChecks": true,
     "sourceMap": false,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
     "resolveJsonModule": true
   },
   "exclude": ["node_modules", "temp-templates", "src/app/templates", "generators"]
