--- a/src/app/templates/tsconfig.json
+++ b/src/app/templates/tsconfig.json
@@ -57,8 +57,8 @@
     // "noImplicitThis": true,                           /* Enable error reporting when `this` is given the type `any`. */
     // "useUnknownInCatchVariables": true,               /* Type catch clause variables as 'unknown' instead of 'any'. */
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
-    "noUnusedLocals": false,                           /* Enable error reporting when a local variables aren't read. */
-    "noUnusedParameters": false,                       /* Raise an error when a function parameter isn't read */
+    "noUnusedLocals": false /* Enable error reporting when a local variables aren't read. */,
+    "noUnusedParameters": false /* Raise an error when a function parameter isn't read */,
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
     // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
     "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
@@ -76,11 +76,11 @@
     /* We include the types from UI5. Only used by Component.ts */
     "types": ["@sapui5/types"]
   },
-  "include": ["src", "ui5"],
+  "include": ["src", "ui5", "src-generated"],
   /* Nice trick from Vite. We reference another config for checking TS conf files on root level. */
   "references": [
     {
       "path": "./tsconfig.node.json"
     }
   ]
-  }
+}
