feat: ask for userName & password & run generate

--- a/src/app/templates/.env
+++ b/src/app/templates/.env
@@ -7,5 +7,5 @@
 
 # Proxy settings
 PROXY_URL=<%= fullServiceUrl %>
-PROXY_SAP_CLIENT=<% sapClientForDev %>
+PROXY_SAP_CLIENT=<%= sapClientForDev %>
 
