--- a/src/app/templates/.env.local
+++ b/src/app/templates/.env.local
@@ -8,5 +8,5 @@
 #PROXY_SAP_CLIENT=300
 
 # SAP user credentials
-#PROXY_SAP_USERNAME=
-#PROXY_SAP_PASSWORD=
+PROXY_SAP_USERNAME=<%= userName %>
+PROXY_SAP_PASSWORD=<%= password %>
