--- a/src/app/templates/.prettierrc
+++ b/src/app/templates/.prettierrc
@@ -10,6 +10,7 @@
   "semi": true,
   "singleQuote": false,
   "singleAttributePerLine": false,
+  "importOrderParsers": ["typescript", "jsx", "decorators"],
   "overrides": [
     {
       "files": [
