--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -33,12 +33,12 @@
     "@cpro-js/react-ui5-webcomponents-form": "^1.0.2",
     "@odata2ts/http-client-fetch": "^0.8.0",
     "@odata2ts/odata-service": "^0.22.0",
+    "@sap-ui/common-css": "^0.38.0",
     "@ui5/webcomponents": "~1.23.3",
     "@ui5/webcomponents-fiori": "~1.23.3",
     "@ui5/webcomponents-react": "~1.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-jss": "^10.10.0",
     "react-modal-promise": "^1.0.2",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
@@ -60,6 +60,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-imports": "^4.2.9",
     "prettier-plugin-packagejson": "^2.5.0",
+    "sass-embedded": "^1.83.0",
     "typescript": "^5.3.3",
     "ui5-nwabap-deployer-cli": "^2.2.0",
     "vite": "^5.2.9",
