--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -7,7 +7,7 @@
     "build": "odata2ts && tsc && vite build",
     "predeploy": "npm run build",
     "deploy": "ui5-deployer deploy",
-    "gen-odata": "odata2ts",
+    "gen-odata": "dotenvx run --env-file=.env --env-file=.env.local -- odata2ts",
     "preview": "npm run build && vite preview",
     "preview-mock": "npm run build && vite preview --mode mock ",
     "start": "vite",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@cpro-js/vite-ui5-common-config": "^0.1.3",
+    "@dotenvx/dotenvx": "^1.31.0",
     "@odata2ts/odata2ts": "^0.39.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@sap-ux/fe-mockserver-core": "^1.2.37",
