--- a/src/app/templates/.env
+++ b/src/app/templates/.env
@@ -5,7 +5,16 @@
 # are not available in your app, unless you prefix a variable with "VITE_".
 # See Vite on .env files: https://vitejs.dev/guide/env-and-mode#env-files
 
-# Proxy settings
-PROXY_URL=<%= fullServiceUrl %>
-PROXY_SAP_CLIENT=<%= sapClientForDev %>
+# URL to the system including protocol (e.g. https) and port, but without any path
+APP_BASE_URL=<%= serverUrl %>
+# Path which will be proxied by our proxy server (least common denominator regarding service paths from the start, e.g. /sap/opu)
+APP_PROXY_PATH=<%= proxyPath %>
+# SAP configuration values
+APP_SAP_CLIENT=<%= sapClientForDev %>
+
+# Default language / locale to use
+APP_DEFAULT_LANGUAGE=<%= defaultLanguage %>
+
+# Paths (without host, but with leading slash) to OData services
+APP_MAIN_SERVICE_PATH=<%= odataServicePath %>
 
