--- a/src/app/templates/.env.local
+++ b/src/app/templates/.env.local
@@ -4,9 +4,9 @@
 # This file should never be committed!
 
 # override proxy settings if necessary
-#PROXY_URL=http://localhost:33333/sap/opu/
-#PROXY_SAP_CLIENT=300
+#APP_BASE_URL=http://localhost:33333
+#APP_SAP_CLIENT=300
 
 # SAP user credentials
-PROXY_SAP_USERNAME=<%= userName %>
-PROXY_SAP_PASSWORD=<%= password %>
+APP_SAP_USERNAME=<%= userName %>
+APP_SAP_PASSWORD=<%= password %>
