feat: only env vars which are used wihtin app get the APP_ prefix

--- a/src/app/templates/.env
+++ b/src/app/templates/.env
@@ -6,11 +6,11 @@
 # See Vite on .env files: https://vitejs.dev/guide/env-and-mode#env-files
 
 # URL to the system including protocol (e.g. https) and port, but without any path
-APP_BASE_URL=<%= serverUrl %>
+BASE_URL=<%= serverUrl %>
 # Path which will be proxied by our proxy server (least common denominator regarding service paths from the start, e.g. /sap/opu)
-APP_PROXY_PATH=<%= proxyPath %>
+PROXY_PATH=<%= proxyPath %>
 # SAP configuration values
-APP_SAP_CLIENT=<%= sapClientForDev %>
+SAP_CLIENT=<%= sapClientForDev %>
 
 # Default language / locale to use
 APP_DEFAULT_LANGUAGE=<%= defaultLanguage %>
