--- a/src/app/templates/.env.local
+++ b/src/app/templates/.env.local
@@ -4,9 +4,9 @@
 # This file should never be committed!
 
 # override proxy settings if necessary
-#APP_BASE_URL=http://localhost:33333
-#APP_SAP_CLIENT=300
+#BASE_URL=http://localhost:33333
+#SAP_CLIENT=300
 
 # SAP user credentials
-APP_SAP_USERNAME=<%= userName %>
-APP_SAP_PASSWORD=<%= password %>
+SAP_USERNAME=<%= userName %>
+SAP_PASSWORD=<%= password %>
