feat: use UI5's fullWidth within launchpad context

--- a/src/app/templates/ui5/manifest.json
+++ b/src/app/templates/ui5/manifest.json
@@ -30,7 +30,7 @@
       "tablet": true,
       "phone": true
     },
-    "fullWidth": false,
+    "fullWidth": true,
     "technology": "UI5"
   },
   "sap.ui5": {
