feat: add clsx as useful dependency

--- a/src/app/templates/package.json
+++ b/src/app/templates/package.json
@@ -34,9 +34,10 @@
     "@odata2ts/http-client-fetch": "^0.8.0",
     "@odata2ts/odata-service": "^0.22.0",
     "@sap-ui/common-css": "^0.38.0",
-    "@ui5/webcomponents": "~2.5.1",
-    "@ui5/webcomponents-fiori": "~2.5.1",
-    "@ui5/webcomponents-react": "~2.5.0",
+    "@ui5/webcomponents": "~2.6.2",
+    "@ui5/webcomponents-fiori": "~2.6.2",
+    "@ui5/webcomponents-react": "~2.6.0",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal-promise": "^1.0.2",
