feat: cross env compatible deployments

--- a/src/app/templates/.env
+++ b/src/app/templates/.env
@@ -2,7 +2,7 @@
 # See dotenv: https://github.com/motdotla/dotenv
 #
 # Any environment variables are only visible to the build process & vite and
-# are not available in your app, unless you prefix a variable with "VITE_".
+# are not available in your app, unless you prefix a variable with "APP_".
 # See Vite on .env files: https://vitejs.dev/guide/env-and-mode#env-files
 
 # URL to the system including protocol (e.g. https) and port, but without any path
