--- a/src/app/templates/tsconfig.json
+++ b/src/app/templates/tsconfig.json
@@ -20,7 +20,7 @@
     /* Specify what module code is generated. */
     "module": "ESNext",
     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     /* Enable importing .json files */
     "resolveJsonModule": true,
 
