--- a/src/app/templates/tsconfig.json
+++ b/src/app/templates/tsconfig.json
@@ -37,6 +37,7 @@
     /*** Interop Constraints ***/
     /* Ensure that each file can be safely transpiled without relying on other imports. */
     "isolatedModules": true,
+    "verbatimModuleSyntax": true,                     /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */
     /* Allow 'import x from y' when a module doesn't have a default export. */
     "allowSyntheticDefaultImports": true,
     /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
@@ -59,7 +60,7 @@
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
     "noUnusedLocals": false /* Enable error reporting when a local variables aren't read. */,
     "noUnusedParameters": false /* Raise an error when a function parameter isn't read */,
-    // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
+    "exactOptionalPropertyTypes": false,               /* Interpret optional property types as written, rather than adding 'undefined'. */
     // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
     "noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
     // "noUncheckedIndexedAccess": true,                 /* Include 'undefined' in index signature results */
@@ -67,7 +68,6 @@
     // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type */
     // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
-    "exactOptionalPropertyTypes": false,
 
     /*** Completeness ***/
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
