feat: deploy to specific server/client

--- a/src/app/templates/.env.local
+++ b/src/app/templates/.env.local
@@ -10,3 +10,9 @@
 # SAP user credentials
 SAP_USERNAME=<%= userName %>
 SAP_PASSWORD=<%= password %>
+
+# override settings for deployment
+#SAP_DEPLOY_BASE_URL=<%= serverUrl %>
+#SAP_DEPLOY_CLIENT=<%= sapClientForDeployment %>
+#SAP_DEPLOY_USERNAME=
+#SAP_DEPLOY_PASSWORD=
